--- a/Landing page/Style/style.css
+++ b/Landing page/Style/style.css
@@ -204,4 +204,8 @@ footer {
   margin-top: 3em;
   background-color: #1f2937;
   color: #f9faf8;
+  text-align: center;
+  font-size: 10px;
+  height: 50px;
+  line-height: 50px;
 }
